--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
               name: Run tests
               command: |
                 npm run test
-  docs-deploy:
+  build_and_deploy:
     docker:
       - image: node:8.10.0
     steps:
@@ -44,6 +44,9 @@ jobs:
           fingerprints:
             - "c7:e8:c6:68:bf:f2:06:6f:e9:73:18:56:5f:2a:db:ca"
       - run:
+          name: build
+          command: npm run build
+      - run:
           name: Deploy docs to gh-pages branch
           command: gh-pages --dotfiles --message "[skip ci] Updates" -d build
 
@@ -52,5 +55,5 @@ workflows:
   pipeline:
     jobs:
       - test_and_lint
-      - docs-deploy
+      - build_and_deploy
 
