--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - run:
           name: Install and configure dependencies
           command: |
+            npm install
             npm install -g --silent gh-pages@2.0.1
             git config user.email "joao.victor_55@hotmail.com"
             git config user.name "victorcmps"
