--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,6 @@ jobs:
       - run:
           name: Install and configure dependencies
           command: |
-            npm install
             npm install -g --silent gh-pages@2.0.1
             git config user.email "joao.victor_55@hotmail.com"
             git config user.name "victorcmps"
@@ -46,7 +45,9 @@ jobs:
             - "c7:e8:c6:68:bf:f2:06:6f:e9:73:18:56:5f:2a:db:ca"
       - run:
           name: build
-          command: npm run build
+          command: |
+            npm install
+            npm run build
       - run:
           name: Deploy docs to gh-pages branch
           command: gh-pages --dotfiles --message "[skip ci] Updates" -d build
