--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "frontend-take-home-assignment",
   "version": "0.1.0",
   "jest": {
-    "coveragePathIgnorePatterns": ["./index.tsx"]
+    "coveragePathIgnorePatterns": [
+      "./index.tsx"
+    ]
   },
   "homepage": "./",
   "dependencies": {
@@ -16,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
@@ -59,5 +62,4 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1"
   }
-  
 }
